# vollyball_scheduling

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  vollyball_scheduling.py  vollyball_scheduling_by_david.py  vollyball_scheduling_by_micheal.py  vollyball_scheduling_failed_attempt.py
project-name/: output.txt  pyproject.toml
project-name/tests/: test_tool.py
project_name/: pyproject.toml
project_name/src/project_name/tool_name/: command_line.py
project_name/test/: test_tool.py
volleyball-planning/: convert_traingulars_to_nice_format.py  main.py  pyproject.toml  tmp.py
