[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Robert Howlett <robert@howletts.org.uk>"]
readme = "README.md"
packages = [{include = "tool_name"}]

[tool.poetry.dependencies]
python = "^3.11"
python-Levenshtein =  "0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tool-name = 'tool_name.command_line:main'

[tool.black]
line-length = 120
