[project]
name =  "volleyball-planning"
authors = [
    {name = "Robert Howlett"},
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulp==3.2.1",
    "highspy==1.11.0",
]
version = "0.1.0"

[dependency-groups]
dev = [
    "ruff==0.12.2",
]

[tool.ruff]
line-length = 120
